<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/holo_orange_light">

    <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/nav_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="?android:attr/windowBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:menu="@menu/bottom_nav_menu"/>
    <TextView
            android:text="@string/task_manager_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/task_manager_message"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
            android:textSize="24sp" android:layout_marginTop="16dp" android:textStyle="bold"
            android:textAlignment="center"/>
    <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/task_manager_message"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/nav_view"
            android:background="@drawable/bg_form" android:id="@+id/scrollView"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0">
        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <TextView
                    android:text="@string/task_manager_offer_caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/offer_caption"
                    android:layout_marginTop="24dp"
                    android:textSize="20sp"
                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:textStyle="bold"/>
            <TextView
                    android:text="@string/task_manager_title_caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/title_caption"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:textSize="20sp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/offer_input"
                    android:textStyle="bold"/>
            <TextView
                    android:text="@string/task_manager_description_caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/description_caption"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:textSize="20sp" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_input" android:textStyle="bold"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/title_input" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/title_caption" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/task_manager_title_input"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:gravity="start|top"
                    android:ems="10"
                    android:id="@+id/description_input" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/description_caption" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/task_manager_description_input"/>
            <TextView
                    android:text="@string/task_manager_location_caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/location_caption" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/description_input"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:textSize="20sp" android:textStyle="bold"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/location_x_coordinate" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/location_caption" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintEnd_toStartOf="@+id/location_y_coordinate"
                    android:hint="@string/task_manager_location_x_input"
                    app:layout_constraintHorizontal_chainStyle="packed"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/location_y_coordinate"
                    android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/location_caption"
                    app:layout_constraintStart_toEndOf="@+id/location_x_coordinate"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:hint="@string/task_manager_location_y_input"/>
            <TextView
                    android:text="@string/task_manager_date_caption"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/date_caption" android:layout_marginTop="24dp"
                    app:layout_constraintTop_toBottomOf="@+id/location_x_coordinate"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="24dp" android:textSize="20sp" android:textStyle="bold"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/date_input"
                    app:layout_constraintTop_toBottomOf="@+id/date_caption" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/task_manager_date_input"
                    android:layout_marginTop="8dp"/>
            <Button
                    android:text="@string/task_manager_submit_button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/date_input"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                    android:layout_marginBottom="24dp" app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@drawable/rounded_button" android:id="@+id/submit_button"/>
            <EditText
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/offer_input" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/offer_caption" android:layout_marginStart="24dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" android:hint="@string/task_manager_offer_input"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
