<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   android:background="@android:color/holo_orange_light">
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_text_username"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_edittext" android:layout_marginStart="24dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="Username"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/register_title"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_text_email"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_edittext" android:hint="@string/email"
            app:layout_constraintStart_toStartOf="@+id/edit_text_username" app:layout_constraintEnd_toEndOf="@+id/edit_text_username"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_text_username"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_text_password"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_edittext" android:hint="@string/password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_email" app:layout_constraintEnd_toEndOf="@+id/edit_text_email"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_text_email"/>
    <EditText
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/edit_text_confirm_password"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:background="@drawable/rounded_edittext" android:hint="@string/confirm_password"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/edit_text_password"
            app:layout_constraintStart_toStartOf="@+id/edit_text_password" app:layout_constraintEnd_toEndOf="@+id/edit_text_password"/>
    <Button
            android:text="@string/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:id="@+id/button_register" app:layout_constraintStart_toStartOf="@+id/edit_text_confirm_password"
            app:layout_constraintEnd_toEndOf="@+id/edit_text_confirm_password"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/edit_text_confirm_password"
            android:textColor="@android:color/white"/>
    <TextView
            android:text="@string/already_have_an_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="16sp"
            android:id="@+id/text_view_login" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_register"
            app:layout_constraintStart_toStartOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="@+id/button_register"/>
    <ProgressBar
            style="?android:attr/progressBarStyle"
            android:visibility="invisible"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/progressbar"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/edit_text_username" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/text_view_login"/>
    <TextView
            android:text="@string/registration_page"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/register_title" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="128dp" android:textSize="20sp"
            android:textStyle="bold" android:textAllCaps="true" app:layout_constraintHorizontal_bias="0.496"/>
</androidx.constraintlayout.widget.ConstraintLayout>